grammars/tree-sitter-svg/grammar.js
		source_file: $ =>
			seq(
				// XML 1.0 §2.8 requires xml_declaration to be absolute first,
				// but real-world SVGs (incl. W3C reference samples) often
				// have a leading newline/BOM/whitespace; be lenient here.
				// Leading misc only permitted when an xml_declaration follows,
				// to keep source_file_repeat1 unambiguous.
				optional(seq(repeat($._misc), $.xml_declaration)),
				repeat($._misc),
				optional(seq($.doctype, repeat($._misc))),
				field('root', $.svg_root_element),
				repeat($._misc),
			),

		_misc: $ =>
			choice(
				$.processing_instruction,
				$.comment,
				alias($.misc_text, $.text),
			),

		svg_root_element: $ =>
			choice(
				$.self_closing_tag,
				seq(
					$.start_tag,
					repeat($._content),
					choice($.end_tag, $.erroneous_end_tag),
				),
			),

		// ─── Generic Element ────────────────────────────────────────

		element: $ =>
			choice(
				$._script_element,
				$._style_element,
				$._path_element,
				$.self_closing_tag,
				seq($.start_tag, repeat($._content), choice($.end_tag, $.erroneous_end_tag)),
			),

		_content: $ =>
			choice(
				$.element,
				$._text_like_content,
			),

		_script_element: $ =>
			choice(
				alias($.script_self_closing_tag, $.self_closing_tag),
				seq(
					alias($.script_start_tag, $.start_tag),
					optional($._raw_or_cdata_text),
					choice(alias($.script_end_tag, $.end_tag), $.erroneous_end_tag),
				),
			),

		_style_element: $ =>
			choice(
				alias($.style_self_closing_tag, $.self_closing_tag),
				seq(
					alias($.style_element_start_tag, $.start_tag),
					optional($._raw_or_cdata_text),
					choice(alias($.style_end_tag, $.end_tag), $.erroneous_end_tag),
				),
			),

		_path_element: $ =>
			choice(
				alias($.path_self_closing_tag, $.self_closing_tag),
				seq(
					alias($.path_start_tag, $.start_tag),
					repeat($._content),
					choice(alias($.path_end_tag, $.end_tag), $.erroneous_end_tag),
				),
			),

		start_tag: $ =>
			seq(
				'<',
				field('name', alias($._start_tag_name, $.name)),
				repeat(seq($._s, $.attribute)),
				optional($._s),
				'>',
			),

		end_tag: $ =>
			seq(
				'</',
				field('name', alias($._end_tag_name, $.name)),
				optional($._s),
				'>',
			),

		self_closing_tag: $ =>
			seq(
				'<',
				field('name', alias($._start_tag_name, $.name)),
				repeat(seq($._s, $.attribute)),
				optional($._s),
				'/>',
			),

		d_attribute: $ =>
			seq(
				field('name', $.d_attribute_name),
				$._eq,
				field('value', $.d_attribute_value),
			),

		d_attribute_name: _ => oneOf(D_ATTRIBUTE_NAMES),

		d_attribute_value: $ =>
			choice(
				$.double_quoted_path_data,
				$.single_quoted_path_data,
			),

		double_quoted_path_data: $ =>
			seq(
				'"',
				optional($.path_data_content),
				'"',
			),

		path_data_content: $ =>
			choice(
				seq(optional($.path_wsp), $.path_data),
				$.path_wsp,
			),

		path_data: $ =>
			prec.right(seq(
				$.moveto_segment,
				repeat(choice($.path_segment, seq($.path_wsp, $.path_segment))),
				optional($.path_wsp),
			)),

		moveto_segment: $ =>
			prec.left(
				seq(
					field('command', alias($.moveto_command, $.path_command)),
					optional($.path_wsp),
					$.path_coordinate_pair,
					repeat(seq(optional($.path_comma_wsp), $.path_coordinate_pair)),
				),
			),

		lineto_segment: $ =>
			prec.left(
				seq(
					field('command', alias($.lineto_command, $.path_command)),
					optional($.path_wsp),
					$.path_coordinate_pair,
					repeat(seq(optional($.path_comma_wsp), $.path_coordinate_pair)),
				),
			),

		path_coordinate_pair: $ =>
			seq(
				$.path_coordinate,
				optional($.path_comma_wsp),
				$.path_coordinate,
			),

		path_coordinate: $ => $.path_number,

		path_comma_wsp: $ =>
			choice(
				seq(optional($.path_wsp), $.path_comma, optional($.path_wsp)),
				$.path_wsp,
			),

		path_command: _ => token(PATH_COMMAND),
		path_number: _ => token(NUMBER_PATTERN),
		path_wsp: _ => token(prec(1, /[ \t\r\n]+/)),

		// ─── style attribute (CSS injection) ────────────────────────

		viewbox_attribute: $ =>
			seq(
				field('name', $.viewbox_attribute_name),
				$._eq,
				field('value', $.viewbox_attribute_value),
			),

		viewbox_attribute_name: _ => oneOf(ATTRIBUTE_BUCKETS.view_box),

		viewbox_attribute_value: $ => quoted($.viewbox_value),

		viewbox_value: $ =>
			seq(
				$.number,
				$.comma_wsp,
				$.number,
				$.comma_wsp,
				$.number,
				$.comma_wsp,
				$.number,
			),

		// ─── preserveAspectRatio attribute ──────────────────────────

		points_attribute: $ =>
			seq(
				field('name', $.points_attribute_name),
				$._eq,
				field('value', $.points_attribute_value),
			),

		points_attribute_name: _ => oneOf(ATTRIBUTE_BUCKETS.coordinate_pair_list),

		points_attribute_value: $ => quoted($.coordinate_pair_list),

		coordinate_pair_list: $ =>
			seq(
				$.coordinate_pair,
				repeat(seq($.comma_wsp, $.coordinate_pair)),
			),

		coordinate_pair: $ => seq($.number, optional($.comma_wsp), $.number),

		// ─── paint attribute (fill, stroke, color, etc.) ────────────

		length_attribute: $ =>
			seq(
				field('name', $.length_attribute_name),
				$._eq,
				field('value', $.length_attribute_value),
			),

		length_attribute_name: _ => oneOf(ATTRIBUTE_BUCKETS.length),

		// The `length` bucket holds attributes whose value space is a length or
		// percentage, but many spec grammars are a union with keyword alternatives
		// or keyword/length combinations: `baseline-shift` (`sub | super |
		// <length-percentage>`), `letter-spacing`/`word-spacing` (`normal |
		// <length>`), `font-size-adjust` (`none | <number>`), `refX`/`refY`
		// (`<length> | left | center | …`), and `transform-origin`
		// (`[ left | center | … | <length-percentage> ]…`). The plain
		// length/percentage/auto value keeps its existing shape; a keyword-bearing
		// value (one or more whitespace-separated keywords, optionally mixed with
		// lengths) is the alternative. A genuine pure-length attribute (`x`,
		// `width`) never carries a keyword in valid SVG, so this superset is
		// lossless and keeps the value typed.
		length_attribute_value: $ => quoted(choice($.length_or_percentage_or_auto, $.length_keyword_value)),

		// Distinct from the plain length/percentage/auto branch: this fires only
		// when a keyword participates, so a bare single length never matches both
		// branches. Either it leads with a keyword, or it leads with a length that
		// is followed by at least one more whitespace-separated item.
		number_attribute: $ =>
			seq(
				field('name', $.number_attribute_name),
				$._eq,
				field('value', $.number_attribute_value),
			),

		number_attribute_name: _ => oneOf(ATTRIBUTE_BUCKETS.number),

		// A bare single `<number>`. The spec's number *lists* (`kernelMatrix`,
		// feColorMatrix `values`, `tableValues`) now carry their list shape
		// through the catalog (`<number>+`) and route to `number_list_attribute`,
		// so this bucket holds only genuine scalar attributes (`bias`, `divisor`,
		// `seed`, …) and needs no separated tail.
		number_attribute_value: $ => quoted($.number),

		// ── number-optional-number attribute (one or two numbers) ──
		// SVG <number-optional-number>: a single number, optionally
		// followed by whitespace and a second number (e.g. stdDeviation,
		// baseFrequency, kernelUnitLength, order, radius).

		number_optional_number_attribute: $ =>
			seq(
				field('name', $.number_optional_number_attribute_name),
				$._eq,
				field('value', $.number_optional_number_attribute_value),
			),

		number_optional_number_attribute_name: _ => oneOf(ATTRIBUTE_BUCKETS.number_optional_number),

		number_optional_number_attribute_value: $ => quoted($.number_optional_number),

		number_optional_number: $ => seq($.number, optional(seq($.wsp, $.number))),

		// ─── length-list attribute (dx, dy, stroke-dasharray) ───────

		length_list_attribute: $ =>
			seq(
				field('name', $.length_list_attribute_name),
				$._eq,
				field('value', $.length_list_attribute_value),
			),

		length_list_attribute_name: _ => oneOf(ATTRIBUTE_BUCKETS.length_list),

		length_list_attribute_value: $ => quoted($.length_list),

		length_list: $ =>
			seq(
				$.length_or_percentage,
				repeat(seq($.comma_wsp, $.length_or_percentage)),
			),

		// ─── rotate attribute ────────────────────────────────────────

		keyword_attribute: $ =>
			seq(
				field('name', $.keyword_attribute_name),
				$._eq,
				field('value', $.keyword_attribute_value),
			),

		keyword_attribute_name: _ => oneOf(ATTRIBUTE_BUCKETS.keyword),

		// Most keyword attributes carry a single enum value, but CSS `||`
		// combinators (e.g. `paint-order="stroke fill markers"`) accept several
		// whitespace-separated keywords in any order. Allow a one-or-more
		// keyword list so both shapes parse; a single keyword is the list of one.
		keyword_attribute_value: $ => quoted(choice($.number, seq($.keyword_value, repeat(seq($.wsp, $.keyword_value))))),

		keyword_value: _ => token(/[A-Za-z_][A-Za-z0-9_-]*/),

		// ─── CSS-text presentation attributes ───────────────────────

		css_text_attribute: $ =>
			seq(
				field('name', $.css_text_attribute_name),
				$._eq,
				field('value', $.css_text_attribute_value),
			),

		css_text_attribute_name: _ => oneOf(ATTRIBUTE_BUCKETS.css_text),

		css_text_attribute_value: $ =>
			choice(
				seq('"', optional(field('content', $.css_attribute_text_double)), '"'),
				seq("'", optional(field('content', $.css_attribute_text_single)), "'"),
			),

		css_attribute_text_double: _ => token(/[^"]+/),
		number_list_attribute: $ =>
			seq(
				field('name', $.number_list_attribute_name),
				$._eq,
				field('value', $.number_list_attribute_value),
			),

		number_list_attribute_name: _ => oneOf(ATTRIBUTE_BUCKETS.number_list),

		// A number list separates with whitespace/commas in the filter context
		// (`kernelMatrix`, feColorMatrix `values`, `tableValues`) but with `;`
		// when the same `values` attribute drives SMIL animation
		// (`values="0;10;20"`). Accept either separator style; a single number is
		// the list-of-one shared by both arms.
		number_list_attribute_value: $ =>
			quoted(choice(
				$.number_list,
				$.semicolon_number_list,
				$.semicolon_coordinate_pair_list,
			)),

		number_list: $ =>
			seq(
				$.number,
				repeat(seq($.comma_wsp, $.number)),
			),

		// ─── duration attribute (time values) ───────────────────────

		semicolon_number_list: $ =>
			seq(
				$.number,
				repeat(seq(optional($.wsp), ';', optional($.wsp), $.number)),
				optional(seq(optional($.wsp), ';', optional($.wsp))),
			),

		_eq: $ => seq(optional($._s), '=', optional($._s)),

		length_or_percentage: $ => choice($.length, $.percentage),
		length_or_percentage_or_auto: $ => choice($.length_or_percentage, 'auto'),

		length: $ => seq($.number, optional($.length_unit)),

		number: _ => token(NUMBER_PATTERN),

		comma_wsp: $ => choice(seq(optional($.wsp), ',', optional($.wsp)), $.wsp),

		wsp: _ => token(/[ \t\r\n]+/),

		text: _ => token(prec(-1, /[^<&]+/)),

		name: _ => token(/(?:[A-Za-z_:]|[\u0080-\uFFFF])(?:[A-Za-z0-9_.:-]|[\u0080-\uFFFF])*/),

		_s: _ => token(/[ \t\r\n]+/),
	},
});
